fixed side gap

--- a/views/css/templatemo_style.css
+++ b/views/css/templatemo_style.css
@@ -17,13 +17,16 @@ a {
   text-decoration: none!important;
 }
 
-body {
-  size: 100%;
-  width: 100%;
-  /*overflow-x: hidden;*/
-  font-size: 62.5%
+html,body
+{
+    font-size: 62.5%;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
-
+ font-size: 62.5%
 ul {
   list-style: none;
   margin: 0px;
